# agata-rag-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py  routes.py
app/clients/: qdrant_client.py
app/core/: config.py  container.py  logging.py
app/models/: schemas.py
app/parsers/: adapters.py
app/parsers/site_parsers/: __init__.py  common.py  katolski_posol_html.py  lucija.py  mdr_serbski.py  pfarrei_crostwitz.py  posol.py  serbske_nowiny.py  zalozba.py
app/providers/: openai_provider.py  sotra_provider.py
app/services/: indexing_service.py  parser_service.py  rag_service.py  retrieval_service.py  scheduler_service.py
app/utils/: chunking.py  hashing.py
tests/: test_chunking.py
