[project]
name = 'rag-server-scaffold'
version = '0.1.0'
description = 'Async RAG server scaffold with FastAPI, Qdrant and Docker'
requires-python = '>=3.11'
dependencies = [
  'fastapi',
  'uvicorn[standard]',
  'python-multipart',
  'pydantic>=2',
  'pydantic-settings>=2',
  'qdrant-client',
  'openai',
  'apscheduler',
  'httpx',
  'lxml',
  'beautifulsoup4',
  'pytest',
]

[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
pythonpath = ['.']
